[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sphinx-watch"
version = "0.0.0"
description = "Helper CLI for Sphinx to realtime build"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6 | ^3.7 | ^3.8 | ^3.9 | ^3.10"
watchdog = "*"
Sphinx = "*"
click = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sphinx-watch = "sphinx_watch.cli:main"
